--- a/css/bar_marron.css
+++ b/css/bar_marron.css
@@ -34,7 +34,7 @@ body {
     transform: translate(-50%, -50%);
 }
 
-#javi-rosa {
+#javi {
     position: absolute;
     top: 60%;
     left: -100%;
